# shaderplayground

./: .gitignore  CMakeLists.txt  README.md  shaderplayground.sublime-project  shaderplayground.sublime-workspace
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  shader.cpp  shader.hpp
